<resources>
    <string name="app_name">Spectra</string>
    <string name="spectra_motto">Spectra : Shaping the Ideas</string>
    <string name="welcome_text">Welcome to Spectra</string>
    <string name="proud_text">Proud to be Spectarian!</string>
    <string name="about_spectra">About</string>
    <string name="log_in_text">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="membership">Be a Member Now!</string>
    <string name="about_text">
       <![CDATA[
    Spectra is the literary society of Vidya Knowledge Park, the first student oriented society in the campus.
    ]]>
        </string>

    <string name="btn_logout">Logout</string>
    <string name="declamation">Declamation</string>
    <string name="nav_header_subtitle">Shaping the Ideas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="event_backdrop_title">Featured Events</string>
    <string name="backdrop_subtitle">Participate to groom yourself.</string>
    <string name="no_internet">No Internet</string>
    <string name="rules_regulations">Rules and Regulations</string>
    <string name="boy_girl_label">It\'s a Boy Girl thing</string>
    <string name="lawsuit_label">Lawsuit</string>
    <string name="radio_show_label">Radio Show</string>
    <string name="rules_declamation"><![CDATA[\u2022 Speech must have been previously  delivered in public by any famous  personalities or
characters. (Politicians,  actors or speeches in movies etc.)\n
\u2022 Prior information should be given to the  coordinators.\n
\u2022 Negative points for Paper reading\n
\u2022 Speeches are to be max ten minutes in  length.\n
\u2022 Imitation of the original speaker should  be accurate with the same notion.]]> </string>

    <string name="law_suit_text">When you have confidence like a Lawyer and have the wit like them "Lawsuit" is the event for you.</string>
    <string name="declamation_text">In this event one has to copy the given speech of a famous personality.</string>
    <string name="judgment_criteria">Judgment Criteria</string>
    <string name="judgement_criteria_declamation">
        \u2022 Presentation (10)\n
        \u2022 Body language (10)\n
        \u2022 Costume (05)\n
        \u2022 Fluency (10)\n
        \u2022 Imitation (15)\n
    </string>
    <string name="judgement_criteria_boy_girl">
        \u2022 Dialogues (10)\n
        \u2022 Fluency (10)\n
        \u2022 Flow of Topic (10)\n
        \u2022 Logic (10)\n
        \u2022 Co-ordination (10)\n
    </string>

    <string name="boy_girl_text">Imitating and copying your favourite actor\'s dialogue, moves and actions, who doesn\'t love it??\n
    If yes then this event is the best!!</string>

    <string name="rules_boy_girl"><![CDATA[\u2022 Two candidates are required, one boy and one girl.\n
\u2022 A clip will be played and none has to imitate the actor and the actress.\n
\u2022 Scores will be given on the basis of the performances of both.]]> </string>
    <string name="rules_law_suit"><![CDATA[\u2022 This is a team event.(Maximum 2 members)\n
\u2022 A case would be given and the two opposing teams have to defend their end of bargain.\n
\u2022 The total time for each case is 10 minutes.\n
        i) 2 minutes for Prosecutor\n
        ii) 2 minutes for Defender.\n
        iii) 4 minutes for Discussion.\n
        iv) 30 seconds for break.\n
        v) 1:30 seconds for Conclusion.\n
\u2022 Judges decisions are final, and they will not be required to explain standing.
\u2022 Limited Participation, which is done on First Come First Serve Basis.]]> </string>

    <string name="judgement_criteria_law_suit">
        \u2022 Presentation (10)\n
        \u2022 Strength of argument (20)\n
        \u2022 Content/Fluency (10)\n
        \u2022 Body Language (10)\n
    </string>

    <string name="radio_show_text">This is a team event in which the participants has to do a radio show. </string>
    <string name="rules_radio_show"><![CDATA[\u2022 This is a team event of 2 to 5 members.\n
\u2022 The total time allotted will be 10 minutes.\n
\u2022 2 songs are allowed to sing(not fully) and musical instruments are allowed.\n
\u2022 Judges decisions are final, and they will not be required to explain standing.\n
\u2022 Limited participation, which is done on First Come First Serve Basis.\n
\u2022 Both English and Hindi can be used.]]> </string>

    <string name="judgement_criteria_radio_show">
        \u2022 Presentation (10)\n
        \u2022 Time-Management (10)\n
        \u2022 Content/Fluency (10)\n
        \u2022 Voice Modulation (10)\n
        \u2022 Team Work (10)\n
    </string>

    <string name="contact_no">Contact Number</string>
    <string name="event_desc">Event Details</string>
    <string name="course_prompt">Course Name</string>
    <string-array name="course_array">
        <item>Choose Course</item>
        <item>B.Tech</item>
        <item>Polytechnic</item>
        <item>B.Fad</item>
        <item>BBA</item>
        <item>BCA</item>
        <item>MBA</item>
        <item>M.Tech</item>
        <item>BJMC</item>
        <item>B.com</item>
        <item>B.Pt</item>
    </string-array>
    <string name="membership_steps">Submit your membership fee to one of our core member to be a member of Spectra:The Literary Society.</string>

    <string name="goals">Goals of Society </string>
    <string name="offer">\u2022 To Provide a place of collaboration for English majors, writers, literary artists, and any other students at Vidya Knowledge Park\n\n
    \u2022 To Provide a forum for club members and other students to share their favorite works of literature in poetry and prose.\n\n
        \u2022 To Provide a place to share and develop creative works of student\'s own creation.\n
</string>
    <string name="email_vector_string">M611.507,525.047c0.48,-18.543 0.591,-53.156 0.412,-118.938c-0.172,-64.445 -0.666,-129.381 -0.708,-134.401c2.938,-38.32 -8.078,-50.025 -30.813,-58.351l-16.478,-11l-0.24,-58.802c0,-18.731 -9.657,-41.424 -55.936,-43.2l-96.524,0.101c-43.492,-29.018 -78.955,-52.678 -84.192,-56.156c-8.202,-5.432 -14.079,-8.994 -20.781,-8.994c-6.487,0 -11.753,3.227 -20.497,8.585c-4.987,3.078 -33.645,22.105 -85.183,56.561l-95.463,-0.094c-45.983,1.766 -55.636,24.462 -55.636,43.165l-0.234,58.314l-13.721,9.208c-0.646,0.042 -1.292,0.143 -1.916,0.364c-23.55,8.309 -33.251,26.219 -31.443,58.074L0.006,527.229c0.023,0.92 0.127,1.848 0.315,2.773C0.11,530.67 0,531.379 0,532.105c0,10.24 6.481,20.793 17.757,29.08c5.186,4.227 11.744,7.746 19.894,10.201c9.601,3.305 20.689,5.307 33.005,5.307l469.271,-0.725h0.747c6.812,0 13.247,-0.549 19.273,-1.508c13.417,-1.561 24.748,-5.57 33.333,-11.805c6.54,-4.146 11.368,-8.906 14.037,-13.789c0.409,-0.27 0.789,-0.582 1.14,-0.93c1.405,-1.412 2.344,-2.367 2.899,-18.039c0.059,-0.949 0.155,-1.881 0.155,-2.846L611.507,525.047zM558.426,560.25c-3.721,0.432 -7.656,0.656 -11.793,0.656l-1.341,-0.01l-234.347,0.025L67.76,560.896l-1.267,0.01c-9.253,0 -17.381,-1.111 -24.3,-3.172c-6.325,-2.215 -11.708,-5.053 -16.004,-8.195c-6.646,-5.641 -10.228,-13.229 -10.228,-22.428l1.175,-271.137c0,-8.644 2.795,-15.4 8.549,-20.65c0.25,-0.23 0.484,-0.474 0.698,-0.737c0.416,-0.334 1.186,-0.919 2.367,-1.721l8.199,-5.51l261.955,170.781c1.666,1.086 3.708,1.434 5.627,0.955c1.052,-0.256 1.919,-0.32 2.838,-0.23c1.61,0.17 3.225,-0.221 4.588,-1.094l264.738,-169.655l3.331,2.224c0.201,0.136 0.412,0.26 0.627,0.373c10.497,5.556 15.387,13.582 15.387,25.291l1.13,269.664c-0.016,0.877 -0.035,1.756 -0.055,2.564c-0.312,9 -4.198,16.676 -11.364,22.225C579.605,554.416 570.53,558.264 558.426,560.25zM60.374,211.621c1.974,-1.325 3.166,-3.545 3.175,-5.922l0.25,-62.146c0,-11.702 4.338,-27.43 41.574,-28.868l97.359,0.101c0,0 0.003,0 0.007,0c1.418,0 2.802,-0.422 3.984,-1.211c65.432,-43.749 83.183,-55.412 86.53,-57.477c6.351,-3.89 10.546,-6.458 12.994,-6.458c2.416,0 6.553,2.422 12.865,6.601c5.289,3.517 41.661,27.784 85.969,57.341c1.175,0.783 2.562,1.205 3.978,1.205c0.003,0 0.006,0 0.006,0l98.418,-0.107c37.531,1.441 41.872,17.169 41.872,28.901l0.257,62.646c0.01,2.383 1.204,4.607 3.188,5.929l10.896,7.273L306.11,384.498c-0.575,0.012 -1.149,0.047 -1.721,0.104L49.873,218.677L60.374,211.621z</string>
    <string name="email_vector_string2">M208.319,307.781c25.258,21.641 56.919,32.615 94.099,32.615c22.365,0 44.022,-4.098 64.396,-12.191c21.018,-8.455 38.675,-20.316 52.48,-35.258c2.686,-2.906 2.504,-7.438 -0.402,-10.124c-2.906,-2.685 -7.438,-2.503 -10.124,0.403c-12.354,13.371 -28.268,24.03 -47.272,31.677c-18.656,7.41 -38.531,11.164 -59.077,11.164c-33.665,0 -62.188,-9.811 -84.765,-29.155c-22.504,-19.371 -33.443,-44.333 -33.443,-76.315c0,-31.563 10.595,-58.52 31.482,-80.128c20.835,-21.521 50.457,-32.43 88.047,-32.43c22.657,0 41.161,3.692 54.996,10.972c33.019,17.364 49.067,43.232 49.067,79.098c0,19.949 -6.568,38.378 -19.511,54.763c-12.335,15.475 -26.884,24.28 -44.255,26.719l23.394,-131.822c0.37,-2.088 -0.201,-4.231 -1.562,-5.857c-1.363,-1.624 -3.374,-2.562 -5.49,-2.562h-35.632c-2.926,0 -5.497,1.77 -6.598,4.377c-8.42,-5.721 -18.193,-8.611 -29.193,-8.611c-24.173,0 -43.785,11.461 -58.279,34.041c-11.734,18.16 -17.686,38.297 -17.686,59.857c0,17.608 4.699,32.544 13.946,44.369c10.932,14.098 26.576,21.245 46.489,21.245c8.325,0 15.81,-1.416 22.212,-4.188c3.38,-1.445 6.994,-3.481 10.939,-6.166c4.961,5.614 13.254,10.354 27.102,10.354c26.316,0 48.464,-11.043 65.842,-32.849c15.007,-19.001 22.618,-40.421 22.618,-63.669c0,-41.109 -19.089,-71.991 -56.73,-91.784c-15.917,-8.374 -36.664,-12.621 -61.669,-12.621c-41.616,0 -74.705,12.377 -98.343,36.797c-23.566,24.375 -35.519,54.688 -35.519,90.092C169.879,256.494 182.812,285.823 208.319,307.781zM329.4,280.086c-9.673,-1.02 -12.864,-5.51 -14.429,-8.994c-0.903,-2.006 -2.676,-3.487 -4.812,-4.013c-2.133,-0.536 -4.396,-0.049 -6.13,1.305c-5.422,4.231 -10.14,7.218 -14.053,8.894c-4.624,2 -10.189,3.016 -16.546,3.016c-15.472,0 -26.976,-5.133 -35.184,-15.718c-7.351,-9.4 -10.919,-21.03 -10.919,-35.563c0,-18.751 5.179,-36.275 15.403,-52.097c11.861,-18.481 26.985,-27.469 46.229,-27.469c11.566,0 20.878,4.127 28.463,12.617c1.821,2.039 4.633,2.857 7.276,2.127c2.633,-0.74 4.617,-2.909 5.11,-5.601l0.906,-4.909h21.118L329.4,280.086z</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>

</resources>
