<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about_spectra"
            android:icon="@drawable/ic_fountain_pen"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/btn_logout"
            android:icon="@drawable/ic_log"
            />



    </group>
</menu>