<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/login_layout_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">


        <EditText
            android:id="@+id/student_id_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/student_id"
            android:inputType="number"
            android:maxLength="8"/>



        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"/>


    </LinearLayout>

    <Button
        android:layout_below="@id/login_input"
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners"
        android:text="@string/submit"
        android:textColor="@color/white_color" />

</RelativeLayout>

    <LinearLayout
        android:id="@+id/no_internet_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:contentDescription="@string/log_in_text"
            android:id="@+id/empty_state"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/cartoon"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>