<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <EditText
            android:id="@+id/input_student_id_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:ellipsize="start"
            android:hint="@string/student_id"
            android:inputType="number"
            android:maxLength="8"/>



        <EditText
            android:id="@+id/input_name_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:ellipsize="start"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />




        <EditText
            android:id="@+id/input_email_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:ellipsize="start"
            android:hint="@string/email" />



            <EditText
                android:id="@+id/input_password_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:ellipsize="start"
                android:hint="@string/password"
                android:padding="4dp"
                android:maxLength="20"/>



    </LinearLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@+id/input_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners"
        android:text="@string/register"
        android:textColor="@color/white_color"
        android:layout_margin="20dp"
        />
</RelativeLayout>


    <LinearLayout
        android:id="@+id/no_internet_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <ImageView
            android:contentDescription="@string/register"
            android:id="@+id/empty_state"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/cartoon"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>