<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/reset_student_id"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/student_id"
        />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/reset_password1"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_password"
        />
    <EditText
        android:layout_margin="16dp"
        android:id="@+id/reset_password2"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_password_again"
        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Reset Password"/>


</LinearLayout>