<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_radio_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/event_details_radio_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_desc"
            android:layout_margin="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_radio_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            card_view:cardCornerRadius="8dp"
            android:layout_below="@id/event_details_radio_show">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_show_text"
                android:textColor="@color/text_black_light"
                android:layout_margin="8dp"
                android:textSize="16sp"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/event_rules_radio_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_regulations"
            android:layout_margin="4dp"
            android:layout_below="@+id/card_view_radio_show"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_rules_radio_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            card_view:cardCornerRadius="8dp"
            android:layout_below="@id/event_rules_radio_show">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_radio_show"
                android:textColor="@color/text_black_light"
                android:layout_margin="8dp"
                android:textSize="16sp"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/event_judgment_radio_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judgment_criteria"
            android:layout_margin="4dp"
            android:layout_below="@+id/card_view_rules_radio_show"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_judgement_radio_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            card_view:cardCornerRadius="8dp"
            android:layout_below="@id/event_judgment_radio_show">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judgement_criteria_radio_show"
                android:textColor="@color/text_black_light"
                android:layout_margin="8dp"
                android:textSize="16sp"/>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>