<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelActivity">


    <ImageView
        android:contentDescription="@string/about_spectra"
        android:id="@+id/imgLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/ic_logo_svg"/>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        android:padding="6dp"
        android:weightSum="2">

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in_text"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white_color"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white_color"/>

    </LinearLayout>


</RelativeLayout>